Fix css
An extra padding was added after the carret button.
Padding was reste to 0 to look nice but it doesn't work on all projects
(because the caret doesn't have its own space).

Now, by using the box-sizing attribute, all elements are sized as they
should do :)

--- a/src/css/selectic.css
+++ b/src/css/selectic.css
@@ -89,15 +89,17 @@
 
 /* }}} */
 
+.selectic * {
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+}
+
 .selectic.form-control {
     display: inline-block;
     padding: 0;
     cursor: pointer;
     border: unset;
-}
-
-.has-feedback .selectic-input {
-    padding-right: 0;
 }
 
 .has-feedback .selectic__icon-container.form-control-feedback {
